# gde_example_cmake_reload

./: .gitignore  CMakeLists.txt  README.md
demo/: icon.svg.import  main.tscn
src/: gdexample.cpp  gdexample.h  register_types.cpp
