cmake_minimum_required(VERSION 3.15)
project(gdexample VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../demo/bin)
string(TOLOWER ${CMAKE_SYSTEM_NAME} SYSTEM_NAME)
string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)

if(NOT DEFINED BITS)
	set(BITS 32)
	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
		set(BITS 64)
	endif(CMAKE_SIZEOF_VOID_P EQUAL 8)
endif()

add_subdirectory(godot-cpp)

# Source files
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")

set(LIBRARY_NAME ${PROJECT_NAME}.${SYSTEM_NAME}.${BUILD_TYPE}.${BITS})
add_library(${LIBRARY_NAME} SHARED ${SOURCE_FILES})
target_link_libraries(${LIBRARY_NAME} PRIVATE godot::cpp)

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
	set_property(TARGET ${LIBRARY_NAME} APPEND_STRING PROPERTY COMPILE_FLAGS "-D HOT_RELOAD_ENABLED ")
	if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
		set_property(TARGET ${LIBRARY_NAME} APPEND_STRING PROPERTY COMPILE_FLAGS "-fno-gnu-unique ")
	endif()
endif()
